# nonebot-plugin-strman

./: .gitignore  .pylintrc  .style.yapf  LICENSE  pyproject.toml
.github/workflows/: code_checker.yml  codecov.yml  coverage.yml  publish.yml  unittest.yml
nonebot_plugin_strman/: __init__.py  config.py  parser.py
tests/: conftest.py  test_export.py  test_load_profile.py  test_parse_tag.py  utils.py
tests/testdata/: test.yaml
tests/testdata/load/: json_load.json  load.yaml
tests/testdata/load/load_json/: dup.json
tests/testdata/load/load_yaml/: dup.yaml
